scroll if menu overflow, grid loose fitting fixed

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ h4 {
 @media (min-width: 1023px) {
   .grid-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: max-content max-content;
     grid-template-areas: "menu photo";
     justify-items: center;
     justify-content: center;
@@ -63,7 +63,6 @@ h4 {
 
 .grid-item.menu {
   grid-area: menu;
-  padding: 12px 0;
 }
 
 .grid-item.photo {
@@ -73,18 +72,32 @@ h4 {
 /* Inside Grid --> */
 
 /* FirstPart - Menu */
+
+.photo-menu-wrapper {
+  overflow: scroll;
+  border-radius: 0.5em;
+  height: 850px;
+  max-width: 20em;
+}
+
+@media (max-width: 1023px) {
+  .photo-menu-wrapper {
+    max-width: 100%;
+    height: 48vh;
+  }
+}
+
 .photo-menu-item {
   background-color: white;
   color: black;
-  padding: 6px;
-  margin: 8px 12px;
-  border-radius: 5px;
+  padding: 0.4em;
+  margin: 0.5em 0.7em;
+  border-radius: 0.3em;
   display: flex;
   flex-direction: row;
   align-items: center;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   transition: 0.3s;
-  max-width: 300px;
 }
 
 @media (max-width: 1023px) {
@@ -139,5 +152,5 @@ h4 {
 .photo_caption {
   color: grey;
   text-align: center;
-  margin: 8px 0;
+  margin: 0.5em 0;
 }
